@@ -1,3 +1,8 @@
+2008-05-12  Marcus D. Hanwell  <marcus@cryos.org>
+
+	* avogadro/src/mainwindow.cpp: Fixed the code to fail properly when
+	the file to be opened does not exist.
+
 2008-05-12  Geoffrey Hutchison  <babel@geoffhutchison.net>
 
 	* libavogadro/src/extensions/propmodel.cpp
